Created a class to reunite characters 2, 4, 6, 8 using functional programming. Tested this class. Did also some improvements in the initializations of the client model view. Finally, added a hint in cli print island (that can be used by all other printers)